--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
       <div class="modal-content">
         <div class="modal-header">
           <h1 class="modal-title fs-5 " id="exampleModalLabel">Signin</h1>
-          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <form action="">
-            <label for=""></label>
-            <input type="email" class="form-control mb-3" placeholder="Email" required>
-            <label for=""></label>
-            <input type="password" class="form-control mb-3" placeholder="******" required>
-            <button  class="btn btn-primary">Login</button>
+          <form id="signin-form">
+            <label for="email-signin" class="mb-1">Email</label>
+            <input id="email-signin" type="email" class="form-control mb-3" placeholder="Email" required>
+            <label for="password-signin" class="mb-1">password</label>
+            <input id="password-signin" type="password" class="form-control mb-3" placeholder="*******" required>
+            <button  type="submit" class="btn btn-primary">Login</button>
           </form>
         </div>
       </div>
@@ -54,21 +54,21 @@
           <div class="modal-content">
             <div class="modal-header">
               <h1 class="modal-title fs-5" id="exampleModalLabel">signup</h1>
-              <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form action="">
-                    <label for=""></label>
-                    <input type="email" class="form-control mb-3" placeholder="Email" required>
-                    <label for=""></label>
-                    <input type="password" class="form-control mb-3" placeholder="******" required>
-                    <button  class="btn btn-primary">Login</button>
-                  </form>
+              <form id="signup-form">
+                <label for="email-signup" class="mb-1">Email</label>
+                <input id="email-signup" type="email" class="form-control mb-3" placeholder="Email" required>
+                <label for="password-signup" class="mb-1">Password</label>
+                <input id="password-signup" type="password" class="form-control mb-3" placeholder="*******" required>
+                <button  type="submit" class="btn btn-primary">Registro</button>
+              </form>
             </div>
           </div>
         </div>
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script type="module"  src="assets/js/main.js"></script>
+    <script type="module" src="assets/js/main.js"></script>
 </body>
 </html>
