--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#signin-modal">Signin</a>
+                <a class="nav-link logged-out" href="#" data-bs-toggle="modal" data-bs-target="#signin-modal">Signin</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#signup-modal">signup</a>
+                <a class="nav-link logged-out" href="#" data-bs-toggle="modal" data-bs-target="#signup-modal">signup</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="logout" href="#">logut</a>
+                <a class="nav-link logged-in" id="logout" href="#">logut</a>
               </li>
             </ul>
           </div>
