--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>proyecto firebase</title>
+    <title>Proyecto Firebase</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-</head>
+    <link href="assets/css/styles.css" />
+  </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">FireApp</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,57 +21,74 @@
                 <a class="nav-link logged-out" href="#" data-bs-toggle="modal" data-bs-target="#signin-modal">Signin</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link logged-out" href="#" data-bs-toggle="modal" data-bs-target="#signup-modal">signup</a>
+                <a class="nav-link logged-out" href="#" data-bs-toggle="modal" data-bs-target="#signup-modal">Signup</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link logged-in" id="logout" href="#">logut</a>
+                <a class="nav-link logged-in" id="logout" href="#">Logout</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
     <h1>Autenticación con Firebase</h1>
-    <!-- signin modal -->
-  <!-- Modal -->
-  <div class="modal fade" id="signin-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5 " id="exampleModalLabel">Signin</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <form id="signin-form">
-            <label for="email-signin" class="mb-1">Email</label>
-            <input id="email-signin" type="email" class="form-control mb-3" placeholder="Email" required>
-            <label for="password-signin" class="mb-1">password</label>
-            <input id="password-signin" type="password" class="form-control mb-3" placeholder="*******" required>
-            <button  type="submit" class="btn btn-primary">Login</button>
+    <main class="row w-75 mx-auto">
+      <div class="col-md-6" id="task-form-container">
+        <div id="create-tasks">
+          <form id="create-form">
+            <label for="task-title">Title:</label>
+            <input type="text" id="task-title" />
+            <label for="task-content">Content:</label>
+            <textarea id="task-content" cols="30" rows="5"></textarea>
+            <button type="submit">Create Task</button>
           </form>
         </div>
       </div>
+    
+      <!-- Acá se mostrarán las tasks de la base de datos -->
+      <div class="col-md-6" id="tasks-container"></div>
+    </main>
+    <!-- Signin modal -->
+    <div class="modal fade" id="signin-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Signin</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="signin-form">
+                        <label for="email-signin" class="mb-1">Email</label>
+                        <input id="email-signin" type="email" class="form-control mb-3" placeholder="Email" required>
+                        <label for="password-signin" for="password-signin" class="mb-1">Password</label>
+                        <input id="password-signin" type="password" class="form-control mb-3" placeholder="******" required>
+                        <button type="submit" class="btn btn-primary form-control mb-2">Login</button>
+                        <hr />
+                        <button id="google-login" class="btn btn-info">Google</button>
+                      </form>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-    <!-- Modal 2-->
+    <!-- Signup modal -->
     <div class="modal fade" id="signup-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h1 class="modal-title fs-5" id="exampleModalLabel">signup</h1>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Signup</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <form id="signup-form">
+                    <label for="email-signup" class="mb-1">Email</label>
+                    <input id="email-signup" type="email" class="form-control mb-3" placeholder="Email" required>
+                    <label for="password-signup" class="mb-1">Password</label>
+                    <input id="password-signup" type="password" class="form-control mb-3" placeholder="******" required>
+                    <button type="submit" class="btn btn-primary">Register</button>
+                  </form>
+                </div>
             </div>
-            <div class="modal-body">
-              <form id="signup-form">
-                <label for="email-signup" class="mb-1">Email</label>
-                <input id="email-signup" type="email" class="form-control mb-3" placeholder="Email" required>
-                <label for="password-signup" class="mb-1">Password</label>
-                <input id="password-signup" type="password" class="form-control mb-3" placeholder="*******" required>
-                <button  type="submit" class="btn btn-primary">Registro</button>
-              </form>
-            </div>
-          </div>
         </div>
-      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script type="module" src="assets/js/main.js"></script>
