--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   </head>
 <body>
   <!-- Prueba del trabajo colaborativo -->
+  <!-- Prueba 1 -->
+  <!-- Prueba 2 -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">FireApp</a>
@@ -98,3 +100,4 @@
     <script type="module" src="assets/js/main.js"></script>
 </body>
 </html>
+<!-- a -->
