--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>Proyecto Firebase</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-    <link href="assets/css/styles.css" />
+    <link href="assets/css/style.css" />
   </head>
-<body>
+<body class="bg-info-subtle">
   <!-- Prueba del trabajo colaborativo -->
   <!-- Prueba 1 -->
   <!-- Prueba 2 -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
+        <div class="container-fluid ">
           <a class="navbar-brand" href="#">FireApp</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -36,15 +36,16 @@
     <h1>Autenticación con Firebase</h1>
 
     <main class="row w-75 mx-auto" id="task-main-container">
-      <div class="col-md-6" id="task-form-container">
+      <div class="col-md-6 " id="task-form-container">
         <div id="create-tasks">
-          <form id="create-form">
-            <label for="task-title">Title:</label>
+          <form id="create-form ">
+            <label class="mb-2 " for="task-title">Title:</label>
             <input type="text" id="task-title" />
-            <label for="task-content">Content:</label>
-            <textarea id="task-content" cols="30" rows="5"></textarea>
+            
+            <label class=" mb-3 " for="task-content">Content:</label>
+            <textarea  id="task-content" cols="30" rows="5"></textarea>
             <br>
-            <button type="submit" id="btn-task-save">Create Task</button>
+            <button class="bg-success text-light" type="submit" id="btn-task-save">Create Task</button>
           </form>
         </div>
       </div>
