--- a/index.html
+++ b/index.html
@@ -13,33 +13,33 @@
   <!-- Prueba del trabajo colaborativo -->
   <!-- Prueba 1 -->
   <!-- Prueba 2 -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid ">
-          <a class="navbar-brand" href="#">FireApp</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a class="nav-link logged-out" href="#" data-bs-toggle="modal" data-bs-target="#signin-modal">Signin</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link logged-out" href="#" data-bs-toggle="modal" data-bs-target="#signup-modal">Signup</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link logged-in" id="logout" href="#">Logout</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+  <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">FireApp</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link logged-out" href="#" data-bs-toggle="modal" data-bs-target="#signin-modal">Signin</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link logged-out" href="#" data-bs-toggle="modal" data-bs-target="#signup-modal">Signup</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link logged-in" id="logout" href="#">Logout</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
     <h1>Autenticación con Firebase</h1>
 
     <main class="row w-75 mx-auto" id="task-main-container">
       <div class="col-md-6 " id="task-form-container">
         <div id="create-tasks">
-          <form id="create-form ">
+          <form id="create-form">
             <label class="mb-2 " for="task-title">Title:</label>
             <input type="text" id="task-title" />
             
