--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <!-- Prueba del trabajo colaborativo -->
   <!-- Prueba 1 -->
   <!-- Prueba 2 -->
+  <!--hola-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">FireApp</a>
