--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <!-- Prueba 1 -->
   <!-- Prueba 2 -->
   <!--hola-->
+   <!--holax2-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">FireApp</a>
